@@ -45,6 +45,20 @@
           &lt;string&gt;parse&lt;/string&gt;
       &lt;/item&gt;
     &lt;/dictionary&gt;
+    &lt;dictionary&gt;
+      &lt;item key="enabled"&gt;
+          &lt;false/&gt;
+      &lt;/item&gt;
+      &lt;item key="override_text"&gt;
+          &lt;unicode&gt;FB-ZMO&lt;/unicode&gt;
+      &lt;/item&gt;
+      &lt;item key="account"&gt;
+          &lt;string&gt;zeitmagazin&lt;/string&gt;
+      &lt;/item&gt;
+      &lt;item key="type"&gt;
+          &lt;string&gt;facebook&lt;/string&gt;
+      &lt;/item&gt;
+    &lt;/dictionary&gt;
   &lt;/list&gt;
 &lt;/pickle&gt;</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="ressort">Lebensart</attribute>
